# k-repo

./: .gitignore  api.http  pyproject.toml
ts_backend/: manage.py
ts_backend/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
ts_backend/accounts/management/commands/: seed_fake_data.py
ts_backend/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_remove_userexpertise_created_at_and_more.py  0004_alter_userexpertise_unique_together_and_more.py
ts_backend/troubleshoots/: apps.py  models.py  serializers.py
ts_backend/troubleshoots/migrations/: 0001_initial.py  0002_alter_tag_options_and_more.py
ts_backend/ts_backend/: asgi.py  settings.py  urls.py  wsgi.py
